[tool.poetry]
name = "pate"
version = "1.1.0"
description = "Reproducing PATE (2017)"
authors = ["Doran Penner <doranaviv@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
numpy = "^2.0.0"
torchvision = "^0.18.1"
tensorboard = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
